[package]
name = "yas"
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/lambdaclass/yet-another-swap/"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet = "0.6.0"

[[bin]]
name = "deploy"
path = "scripts/deploy.rs"
