[package]
name = "yas"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/lambdaclass/yet-another-swap/"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
dotenv = "0.15.0"
rpassword = "7.2.0"
serde_json = "1.0.74"
starknet = "0.6.0"
tokio = { version = "1.21.2", features = ["full"]}
url = "2.2.2"

[[bin]]
name = "deploy"
path = "scripts/deploy.rs"

[[bin]]
name = "local"
path = "scripts/local.rs"